--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ section {
 }
 
 .text_inside_any_card{
-    width: 300px;
+    width: 20rem;
 }
 
 .inside_card_normal_para_text{
@@ -77,7 +77,7 @@ section {
 /* for long width sections style   */
 .long_section{
     width: 140%;
-    min-width: 140vw;
+    min-width: 140%;
 }
 
 
@@ -108,7 +108,7 @@ section {
     z-index: 10;
     color: white;
     top: 50%;
-    left: 90%;
+    right: 3%;
     transform: translateY(-50%);
     text-transform: uppercase;
 }
@@ -146,7 +146,7 @@ section {
     position: absolute;
     background-color: #e5e5e5;
     padding: 3rem 4rem;
-    width: 670px; 
+    width: 70%; 
     right: 0;
     display: flex;
     justify-content: flex-end;
@@ -156,12 +156,12 @@ section {
     position: absolute;
     top: 3rem;
     left: 3rem;
-    width: 500px;
+    width: 50%;
 }
 
 .fourth_section_second_image{
-    width: 170px;
-    height: 170px;
+    width: 20%;
+    height: 25%;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -177,14 +177,19 @@ section {
     position: absolute;
     left: 50%;
     bottom: 10%;
-    width: 400px;
+    width: 18%;
 }
 
 .fourth_section_fourth_image{
     position: absolute;
     right: 0;
-    width: 560px;
+    width: 26%;
     top: 0;
+    height: 100%;
+}
+
+.right_float{
+    width: 50%;
 }
 
 /* fifth section style  */
@@ -192,32 +197,36 @@ section {
     position: absolute;
     top: 3rem;
     left: 6rem;
-    width: 300px;
+    width: 15%;
 }
 
 .fifth_section_other_info_text{
     position: absolute;
     left: 6rem;
     top: 60%;
+    width: 10%;
 }
 
 .fifth_section_second_image{
     position: absolute;
     left: 25%;
     top: 30%;
-    width: 300px;
+    width: 14%;
 }
 
 .fifth_section_third_image{
     position: absolute;
     left: 44%;
+    width: 40%;
 }
 
 .fifth_section_fourth_image{
     position: absolute;
     left: 65%;
     top: 50%;
+    width: 30%;
     transform: translateY(-50%);
 }
+
 
 
